Add the extension settings admin API
