# api/src/app.ts
@@ -16,6 +16,7 @@ import collectionsRouter from './controllers/collections.js';
 import configRouter from './controllers/config.js';
 import dashboardsRouter from './controllers/dashboards.js';
 import extensionsRouter from './controllers/extensions.js';
+import extensionSettingsRouter from './controllers/extension-settings.js';
 import fieldsRouter from './controllers/fields.js';
 import filesRouter from './controllers/files.js';
 import flowsRouter from './controllers/flows.js';
@@ -298,6 +299,7 @@ export default async function createApp(): Promise<express.Application> {
 	app.use('/config', configRouter);
 	app.use('/dashboards', dashboardsRouter);
 	app.use('/extensions', extensionsRouter);
+	app.use('/extension-settings', extensionSettingsRouter);
 	app.use('/fields', fieldsRouter);
 	app.use('/files', filesRouter);
 	app.use('/flows', flowsRouter);
